--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,102 @@
-<h1>Umaru Bayoh</h1>
+<!-- Page Heading -->
+    <h1>Welcome to CSE Motors!</h1>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <picture>
+        <!-- Large: >= 600px -->
+         <source
+         srcset="/images/vehicles/dolorean.webp"
+         media="(min-width: 1500px)">
+
+        <!-- Small: <500px -->
+      <img
+        class="hero-img"
+        src="/images/vehicles/delorean-tn.webp"
+        alt="">
+        </picture>
+
+      <div class="hero-content">
+          <h2>DMC Delorean</h2>
+          <ul>
+            <li>3 Cup Holders</li>
+            <li>Superman Doors</li>
+            <li>Fuzzy Dicel</li>
+          </ul>
+
+          <a href="#" class="hero-cta">
+            <img
+            class="hero-cta-img"
+              src="/images/site/own_today.webp"
+              alt="">
+          </a>
+        </div>
+      
+    </section>
+    <!-- End Hero Section -->
+
+    <div class="review-upgrade-cont">
+      <!-- Reviews -->
+      <section class="reviews">
+        <h3>DMC Delorean Reviews</h3>
+        <ul>
+          <li>“So fast it's almost like traveling in time.” (4/5)</li>
+          <li>“Coolest ride on the road.” (4/5)</li>
+          <li>“I'm feeling McFly!” (5/5)</li>
+          <li>“The most futuristic ride of the day.” (4.5/5)</li>
+          <li>“80's livin and I love it!” (5/5)</li>
+        </ul>
+      </section>
+
+      <!-- Upgrades -->
+      <section class="upgrades">
+        <h3>Delorean Upgrades</h3>
+          <div class="upgrade-grid">
+            <figure class="upgrade-item">
+              <a href="#">
+                <img src="/images/upgrades/flux-cap.webp" alt="">
+              </a>
+              <figcaption>
+                <a href="#">
+                Flux Capacitor
+                </a>
+              </figcaption>
+            </figure>
+
+
+          <figure class="upgrade-item">
+            <a href="#">
+            <img src="/images/upgrades/flame.webp" alt="">
+            </a>
+            <figcaption>
+              <a href="#">
+              Flame Decals
+              </a>
+            </figcaption>
+          </figure>
+
+          <figure class="upgrade-item">
+            <a href="#">
+            <img src="/images/upgrades/bumper_sticker.webp" alt="">
+            </a>
+            <figcaption>
+              <a href="#">
+              Bumper Stickers
+              </a>
+            </figcaption>
+          </figure>
+
+          <figure class="upgrade-item">
+            <a href="#">
+            <img src="/images/upgrades/hub-cap.webp" alt="">
+            </a>
+            <figcaption>
+              <a href="#">
+              Hub Caps
+              </a>
+            </figcaption>
+          </figure>
+          </div>
+      </section>
+    </div>
+    
