--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,4 +7,6 @@ let year = d.getFullYear()
         <%= year %>, 
         CSE 340 App
     </p>
+    <a href="/inv/intentional-error
+">Error Link</a>
 </footer>
