--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!-- Page Heading -->
     <h1>Welcome to CSE Motors!</h1>
+    <%- messages() %>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -100,3 +101,5 @@
       </section>
     </div>
     
+<!-- Import Fade-Out Function -->
+<script src="/js/script.js"></script>
