--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -8,14 +8,23 @@
 <!-- Flash message -->
 <%- messages() %>
 
-
 <!-- Vehicle Management View -->
 <section class="management-links">
     <ul>
         <li><a href="/inv/add-classification" title="Add a new vehicle classification">Add New Classification</a></li>
         <li><a href="/inv/add-vehicle" title="Add a new vehicle">Add New Vehicle</a></li>
     </ul>
+
+    <!--  Management View -->
+    <h2>Manage Inventory</h2>
+    <p>Choose a classification to see those Inventory items.</p>
+    <%- classificationSelect %>
+
+    <table id="inventoryDisplay"></table>
+
+    <noscript>JavaScript must be enabled to use this page.</noscript>
 </section>
 
 <!-- Import Fade-Out Function -->
 <script src="../js/script.js"></script>
+<script src="../../js/inventory.js"></script>
