--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,8 +29,8 @@ body {
 ================================ */
 
 #top-header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: auto 1fr;
   align-items: center;
   padding: 1rem 0;
 }
@@ -43,11 +43,14 @@ body {
 
 .siteName a {
   font-weight: bold;
-  font-size: clamp(1.5rem, 2.5vw, 2rem);
+  font-size: clamp(1.2rem, 1.8vw, 2rem);
 }
 
 #tools {
-  padding-bottom: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  gap: .5rem;
 }
 
 #tools a {
@@ -66,14 +69,16 @@ body {
 .navigation ul {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  gap: .5rem;
   margin: 0;
-  padding: 0;
+  padding: 1rem;
 }
 
 .navigation li, .navigation a {
-  padding: .5rem 0;
+  /* padding: .5rem 0; */
   color: #ffffff;
   cursor: pointer;
 }
@@ -91,15 +96,12 @@ body {
 /* ===============================
    HEADINGS
 ================================ */
-
-h1, h3, h4 {
-  font-size: clamp(1.5rem, 1.5vw, 2rem);
-  font-weight: bold;
+h1 {
+  font-size: 1.5em;
 }
 
 h2 {
-  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
-  font-weight: bold;
+  font-size: 1.35em;
 }
 
 /* ===============================
@@ -228,7 +230,7 @@ footer .copyright {
   margin-bottom: -1rem;
 }
 
-.namePrice {
+.namePrice, .namePrice a {
   font-size: clamp(1rem, 1.5vw, 1.5rem);
 }
 
@@ -451,12 +453,16 @@ footer .copyright {
   list-style: none;
 }
 
+#inventoryDisplay th {
+  font-size: 1.1rem;
+}
+
 
 /* ===============================
   ADD VEHICLE FORM VIEW
 ================================ */
   /* General form styling */
-form input, form select, form textarea {
+form input, form select, form textarea, select {
   display: block;
   margin: 0.5rem 0 1rem 0;
   padding: 0.5rem;
@@ -469,6 +475,7 @@ form input, form select, form textarea {
 /* Valid input */
 form input:valid,
 form select:valid,
+select:valid,
 form textarea:valid {
   border-color: #28a745; /* green */
   background-color: #e6ffed;
@@ -477,6 +484,7 @@ form textarea:valid {
 /* Invalid input */
 form input:invalid,
 form select:invalid,
+select:invalid,
 form textarea:invalid {
   border-color: #dc3545; /* red */
   background-color: #ffe6e6;
